--- a/src/scss/views/catalog.scss
+++ b/src/scss/views/catalog.scss
@@ -64,14 +64,12 @@
     font-weight        : 600;
     line-height        : 1.25;
     display            : inline-block;
-    display            : -webkit-box;
     overflow           : hidden;
     height             : 40px;
     text-decoration    : none;
     text-overflow      : ellipsis;
     color              : #161616;
-    -webkit-line-clamp : 2;
-    -webkit-box-orient : vertical;
+
   }
 
   // .item-product__prices
@@ -243,8 +241,12 @@
 
   // .categories__item
   &__item {
-    flex   : calc(100% / 4 - 30px);
-    margin : 0 15px 30px;
+    flex   : calc(100% / 4 - 46px);
+    margin : 0 23px 40px;
+
+    @media screen and (max-width : 1139px) {
+      flex   : calc(100% / 2 - 46px);
+    }
   }
 }
 
@@ -257,6 +259,10 @@
   border-radius    : 10px;
   background-color : #f9f9f9;
   box-shadow       : 0 33px 80px rgba(120, 120, 120, 0.07), 0 4.13211px 10.0172px rgba(120, 120, 120, 0.035);
+
+  @media screen and (max-width : 1139px) {
+    grid-template-columns : repeat(3, 1fr);
+  }
 
   // .item-category__title
   &__title {
