--- a/src/scss/views/index.scss
+++ b/src/scss/views/index.scss
@@ -25,6 +25,10 @@
     width       : 100vw;
     margin-top  : 80px;
     margin-left : calc((100vw - #{$contentWidth} + 30px) / -2);
+
+    @media screen and (max-width : 1139px) {
+      margin-left : -40px;
+    }
   }
 
   // .main-page__about
@@ -38,6 +42,10 @@
     margin-top    : 45px;
     margin-bottom : -80px;
     margin-left   : calc((100vw - #{$contentWidth}) / -2);
+
+    @media screen and (max-width : 1139px) {
+      margin-left : -40px;
+    }
   }
 
   // .main-page__banner
@@ -80,6 +88,11 @@
     @media screen and (max-width : 1139px) {
       grid-template-columns : repeat(3, 1fr);
     }
+
+    @media screen and (max-width : 767px) {
+      grid-template-columns : repeat(2, 1fr);
+      gap                   : 10px;
+    }
   }
 
   // .collections-block__item
@@ -92,6 +105,11 @@
     &:nth-child(2) {
       grid-column : 3 / 4;
       grid-row    : 1 / 2;
+
+      @media screen and (max-width : 767px) {
+        grid-column : initial;
+        grid-row    : initial;
+      }
     }
 
     &:nth-child(3) {
@@ -101,6 +119,10 @@
       @media screen and (max-width : 1139px) {
         grid-column : 3 / 4;
         grid-row    : 2 / 3;
+      }
+      @media screen and (max-width : 767px) {
+        grid-column : initial;
+        grid-row    : initial;
       }
     }
   }
@@ -161,22 +183,34 @@
       line-height : 1.2222;
     }
 
+    @media screen and (max-width : 767px) {
+      font-size: 14px;
+      line-height: 1.2142;
+      padding          : 5px 10px;
+    }
+
+
 
     // .item-collection__title--big
     &--big {
       font-size : 32px;
       top       : 25px;
       padding   : 4px 30px 7px;
+
+      @media screen and (max-width : 767px) {
+        font-size: 22px;
+        line-height: 1.2272;
+      }
     }
   }
 
   // .item-collection__image
   &__image {
+    height     : 100%;
     transition : transform 0.3s;
-    height : 100%;
 
     > img {
-      width : 100%;
+      width  : 100%;
       height : 100%;
     }
 
@@ -252,6 +286,7 @@
   &__inner {
     display         : flex;
     align-items     : flex-end;
+    flex-wrap       : wrap;
     justify-content : space-around;
     max-width       : 1070px;
     margin          : 0 auto;
@@ -260,6 +295,16 @@
 
   // .advantages-block__item
   &__item {
+
+    @media screen and (max-width : 1139px) {
+      flex          : 1 1 50%;
+      margin-bottom : 40px;
+    }
+
+    @media screen and (max-width : 560px) {
+      flex          : 1 1 100%;
+      margin-bottom : 40px;
+    }
   }
 }
 
