--- a/src/scss/includes/header.scss
+++ b/src/scss/includes/header.scss
@@ -25,6 +25,11 @@
         padding-top    : 21px;
         padding-bottom : 21px;
       }
+      @media screen and (max-width : 560px) {
+        padding-top    : 14px;
+        padding-bottom : 9px;
+        align-items : flex-start;
+      }
     }
 
     // .header__container--bottom
@@ -92,6 +97,10 @@
       padding          : 8px 40px;
       background-color : #00cc52;
     }
+
+    @media screen and (max-width : 767px) {
+      padding          : 8px 15px;
+    }
   }
 
   // .header__phones
@@ -99,6 +108,8 @@
     @media screen and (max-width : 1139px) {
       margin-left : auto;
     }
+
+
   }
 
   // .header__personal-block
@@ -170,6 +181,10 @@
     align-items : center;
   }
 
+  @media screen and (max-width : 560px) {
+    flex-direction : column;
+  }
+
   // .logo__image
   &__image {
     @media screen and (max-width : 1139px) {
@@ -190,6 +205,12 @@
       display     : block;
       max-width   : 126px;
       margin-left : 10px;
+    }
+
+    @media screen and (max-width : 560px) {
+      margin-top: 5px;
+      margin-bottom: 10px;
+      white-space: nowrap;
     }
 
   }
@@ -248,6 +269,11 @@
 }
 
 .phones-block {
+
+  @media screen and (max-width : 660px) {
+    display : none;
+  }
+
   // .phones-block__item
   &__item {
     font-size       : 18px;
@@ -270,7 +296,14 @@
   @media screen and (max-width : 1139px) {
     margin-left : 30px;
   }
+  @media screen and (max-width : 767px) {
+    margin-left : auto;
 
+  }
+
+  @media screen and (max-width : 560px) {
+    margin-top: 10px;
+  }
 
   // .personal-block__item
   &__item {
@@ -283,6 +316,10 @@
   margin-left     : 15px;
   text-align      : center;
   text-decoration : none;
+
+  @media screen and (max-width : 768px) {
+    margin-left     : 5px;
+  }
 
 
   // .item-personal-block__count
@@ -301,6 +338,17 @@
     border-radius    : 50%;
     background-color : #feb618;
 
+    @media screen and (max-width : 768px) {
+      font-size   : 11px;
+      line-height : 1.18181;
+      top         : 0;
+      right       : 0;
+      left        : auto;
+      width       : 16px;
+      height      : 16px;
+    }
+
+
   }
 
   // .item-personal-block__image
@@ -312,6 +360,13 @@
     width           : 36px;
     height          : 32px;
     margin          : 0 auto;
+
+
+    > svg {
+      @media screen and (max-width : 768px) {
+        max-width : 22px;
+      }
+    }
   }
 
   // .item-personal-block__title
@@ -492,10 +547,14 @@
 
 
 .burger-mobile-menu {
-  margin-left : 20px;
+  margin-left : 15px;
 
-  @media screen and (min-width : 769px) {
+
+  @media screen and (min-width : 1140px) {
     display : none;
+  }
+  @media screen and (max-width : 560px) {
+    margin-top: 13px;
   }
 }
 
@@ -585,16 +644,16 @@
 
   // .mobile-menu-block__call-forms
   &__call-forms {
-    font-size       : 14px;
-    font-weight     : 600;
-    line-height     : 1.2142;
-    color           : #fff;
-    margin-top : 25px;
-    display : flex;
+    font-size   : 14px;
+    font-weight : 600;
+    line-height : 1.2142;
+    display     : flex;
+    margin-top  : 25px;
+    color       : #fff;
 
     > svg {
+      margin-top   : 2px;
       margin-right : 5px;
-      margin-top : 2px;
     }
   }
 
@@ -619,9 +678,9 @@
     font-weight     : bold;
     line-height     : 22px;
     display         : block;
+    margin-top      : 25px;
     text-decoration : none;
     color           : #fff;
-    margin-top : 25px;
 
     > span {
       color : #feb618;
