--- a/src/scss/includes/sidebar.scss
+++ b/src/scss/includes/sidebar.scss
@@ -4,6 +4,10 @@
   max-width    : 255px;
   margin-right : 30px;
 
+  @media screen and (max-width : 1139px) {
+    display : none;
+  }
+
   // .sidebar__block
   &__block {
     margin-bottom    : 40px;
@@ -67,7 +71,7 @@
 
     // .menu-sidebar__btn--open
     &--open {
-      transform : rotate(0);
+      transform : rotate(-180deg);
     }
 
   }
