--- a/src/scss/views/index.scss
+++ b/src/scss/views/index.scss
@@ -29,11 +29,19 @@
     @media screen and (max-width : 1139px) {
       margin-left : -40px;
     }
+
+    @media screen and (max-width : 767px) {
+      margin-left : -15px;
+    }
   }
 
   // .main-page__about
   &__about {
     margin-top : 80px;
+
+    @media screen and (max-width : 767px) {
+      margin-top : 60px;
+    }
   }
 
   // .main-page__works
@@ -45,6 +53,10 @@
 
     @media screen and (max-width : 1139px) {
       margin-left : -40px;
+    }
+
+    @media screen and (max-width : 767px) {
+      margin-left : -15px;
     }
   }
 
@@ -184,11 +196,10 @@
     }
 
     @media screen and (max-width : 767px) {
-      font-size: 14px;
-      line-height: 1.2142;
-      padding          : 5px 10px;
+      font-size   : 14px;
+      line-height : 1.2142;
+      padding     : 5px 10px;
     }
-
 
 
     // .item-collection__title--big
@@ -198,8 +209,8 @@
       padding   : 4px 30px 7px;
 
       @media screen and (max-width : 767px) {
-        font-size: 22px;
-        line-height: 1.2272;
+        font-size   : 22px;
+        line-height : 1.2272;
       }
     }
   }
@@ -331,7 +342,13 @@
 .about-block {
   // .about-block__inner
   &__inner {
-    display : flex;
+    display     : flex;
+    align-items : flex-start;
+
+    @media screen and (max-width : 767px) {
+      flex-direction : column;
+    }
+
   }
 
   // .about-block__img
@@ -339,6 +356,19 @@
     position     : relative;
     flex         : 0 0 auto;
     margin-right : 55px;
+
+
+    @media screen and (max-width : 1139px) {
+      flex-basis   : 320px;
+      margin-right : 40px;
+    }
+
+    @media screen and (max-width : 767px) {
+      flex-basis    : auto;
+      margin-right  : 10px;
+      margin-bottom : 50px;
+    }
+
 
     &::after {
       content  : '';
@@ -349,6 +379,8 @@
       left     : 15px;
       border   : 4px solid #feb618;
     }
+
+
   }
 
   // .about-block__info
@@ -359,6 +391,7 @@
   &__title {
     font-size   : 24px;
     font-weight : bold;
+    line-height : 1.2083;
     color       : #161616;
   }
 
@@ -432,8 +465,21 @@
 
 .main-slider {
   position    : relative;
-  width       : 1360px;
-  margin-left : calc((1360px - #{$contentWidth}) / -2);
+  width   : 1360px;
+  margin-left : calc((1360px - #{$contentWidth} + 30px) / -2);
+
+  @media screen and (max-width : 1360px) {
+    width : 100vw;
+    margin-left : calc((100vw - #{$contentWidth} + 30px) / -2);
+  }
+
+  @media screen and (max-width : 1139px) {
+    margin-left : -40px;
+  }
+
+  @media screen and (max-width : 767px) {
+    margin-left : -15px;
+  }
 
   // .main-slider__container
   &__container {
@@ -511,6 +557,29 @@
       margin-right : 10px;
     }
   }
+
+  // .reviews-block__btn
+  &__btn {
+    // .reviews-block__btn--prev
+    &--prev {
+      left : -50px;
+      //
+      @media screen and (max-width : 1210px) {
+        left : -35px;
+      }
+    }
+
+    // .reviews-block__btn--next
+    &--next {
+      right : -50px;
+
+      @media screen and (max-width : 1210px) {
+        right : -35px;
+      }
+    }
+  }
+
+
 }
 
 .item-review {
@@ -528,6 +597,10 @@
     font-size   : 16px;
     margin-top  : 38px;
     color       : #454545;
+
+    @media screen and (max-width : 1139px) {
+      margin-top : 20px;
+    }
   }
 
   // .item-review__author
@@ -550,6 +623,10 @@
   display         : flex;
   text-decoration : none;
 
+  @media screen and (max-width : 1139px) {
+    flex-direction : column;
+  }
+
   // .item-product-review__image
   &__image {
     display         : flex;
@@ -558,6 +635,13 @@
     max-width       : 150px;
     height          : 120px;
     margin-right    : 20px;
+
+    @media screen and (max-width : 1139px) {
+      max-width     : none;
+      height        : auto;
+      margin-right  : 0;
+      margin-bottom : 20px;
+    }
   }
 
   // .item-product-review__add
@@ -608,6 +692,15 @@
   // .questions-form__inner
   &__inner {
     display : flex;
+
+
+    @media screen and (max-width : 992px) {
+      flex-direction: column;
+    }
+
+    @media screen and (max-width : 767px) {
+      margin-top : 30px;
+    }
   }
 
   // .questions-form__field
@@ -632,11 +725,23 @@
     color         : #fff;
     border-radius : 5px;
     background    : #feb618;
+
+    @media screen and (max-width : 992px) {
+      margin-top : 50px;
+      margin-left : 0;
+      align-self: flex-start;
+    }
+
   }
 
   // .questions-form__agree
   &__agree {
     color : #fff;
+
+    @media screen and (max-width : 992px) {
+      margin-top : -75px;
+
+    }
 
     a {
       color : inherit;
