--- a/src/scss/includes/sidebar.scss
+++ b/src/scss/includes/sidebar.scss
@@ -62,7 +62,7 @@
     top : 5px;
     right : 0;
     transform-origin: center;
-    transform : rotate(-90deg);
+    transform : rotate(0);
     transition: all 0.1s;
 
     > svg {
