--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -413,7 +413,7 @@
                          height="20">
                       <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-5"></use>
                     </svg>
-                    стулья
+                    СТОЛЫ И стулья
                   </a>
                 </li>
               </ul>
