--- a/src/html/views/works.html
+++ b/src/html/views/works.html
@@ -50,46 +50,46 @@ title: "Заголовок | Проект",
       <h1 class="page-content__title">Наши работы</h1>
       <div class="works-page-block">
         <div class="works-page-block__inner">
-          <div class="works-page-block__item item-material">
+          <div class="works-page-block__item item-work">
             <a href=""
                data-fancybox=""
-               class="item-material__image">
+               class="item-work__image">
               <img src="uploads/works/1.jpg"
                    alt="">
             </a>
 
           </div>
-          <div class="works-page-block__item item-material">
+          <div class="works-page-block__item item-work">
             <a href=""
                data-fancybox=""
-               class="item-material__image">
+               class="item-work__image">
               <img src="uploads/works/2.jpg"
                    alt="">
             </a>
 
           </div>
-          <div class="works-page-block__item item-material">
+          <div class="works-page-block__item item-work">
             <a href=""
                data-fancybox=""
-               class="item-material__image">
+               class="item-work__image">
               <img src="uploads/works/3.jpg"
                    alt="">
             </a>
 
           </div>
-          <div class="works-page-block__item item-material">
+          <div class="works-page-block__item item-work">
             <a href=""
                data-fancybox=""
-               class="item-material__image">
+               class="item-workl__image">
               <img src="uploads/works/4.jpg"
                    alt="">
             </a>
 
           </div>
-          <div class="works-page-block__item item-material">
+          <div class="works-page-block__item item-work">
             <a href=""
                data-fancybox=""
-               class="item-material__image">
+               class="item-work__image">
               <img src="uploads/works/5.jpg"
                    alt="">
             </a>
