--- a/src/scss/views/about.scss
+++ b/src/scss/views/about.scss
@@ -2,7 +2,12 @@
 .about {
   // .about__inner
   &__inner {
-    display : flex;
+    display     : flex;
+    align-items : flex-start;
+
+    @media screen and (max-width : 992px) {
+      display : block;
+    }
   }
 
   // .about__img
@@ -10,6 +15,14 @@
     position     : relative;
     flex         : 0 0 auto;
     margin-right : 65px;
+
+    @media screen and (max-width : 992px) {
+      margin-right : 15px;
+    }
+
+    > img {
+      width        : 100%;
+    }
 
     &::after {
       content  : '';
@@ -32,6 +45,11 @@
     font-weight : bold;
     margin-top  : 15px;
     color       : #161616;
+    line-height : 1.2083;
+
+    @media screen and (max-width : 992px) {
+      margin-top : 46px;
+    }
   }
 
   // .about__text
