sale product item

--- a/src/html/views/forms.html
+++ b/src/html/views/forms.html
@@ -19,6 +19,17 @@ title: "Заголовок | Проект",
         </button>
         <div class="form__inner">
           <div class="form__title">Сохранить цену</div>
+
+          <div class="form__messages form-messages">
+            <div class="form-messages__icon">
+              <svg width="32"
+                   height="32">
+                <use xlink:href="img/spritemap.svg#sprite-form-messages-icon"></use>
+              </svg>
+            </div>
+            <div class="form-messages__text">Спасибо! Ваша заявка принята!</div>
+          </div>
+
           <div class="form__description">
             Нет возможности купить сейчас? Не упустите выгодную цену! Оформите заказ с текущей скидкой и оплатите его в течение 30 дней
           </div>
@@ -51,12 +62,12 @@ title: "Заголовок | Проект",
                 <input type="checkbox"
                        checked
                        class="item-field__field item-field__field--checkbox">
-                <span class="item-field__title item-field__title--checkbox">
-                  Я согласен на обработку
+                <span></span>
+                Я согласен на обработку
                 <a target="_blank"
                    rel="noopener noreferrer"
                    href="">персональных данных</a>
-                </span>
+
               </label>
             </div>
             <div class="form__actions">
