--- a/src/html/views/catalog.html
+++ b/src/html/views/catalog.html
@@ -38,7 +38,8 @@ title: "Заголовок | Проект",
             <a href=""
                class="menu-sidebar__link current">Спальные комплекты
             </a>
-            <button class="menu-sidebar__btn" data-js-catalog-menu-btn>
+            <button class="menu-sidebar__btn"
+                    data-js-catalog-menu-btn>
               <svg width="9"
                    height="11">
                 <use xlink:href="img/spritemap.svg#sprite-sorting-down"></use>
@@ -233,6 +234,62 @@ title: "Заголовок | Проект",
 
       <div class="catalog__list product-list">
         <div class="product-list__inner">
+
+          <div class="product-list__item item-product">
+            <div class="item-product__stickers stickers">
+              <div class="stickers__item item-sticker item-sticker--new">NEW</div>
+            </div>
+            <a href="product.html"
+               class="item-product__image">
+              <img src="uploads/products/1.png "
+                   alt="">
+            </a>
+            <a href="product.htm"
+               class="item-product__title">Кровать двуспальная Лондон (Распродажа)</a>
+            <div class="item-product__prices">
+              <div class="item-product__price item-product__price--old">20 368 ₽</div>
+              <div class="item-product__price"><span>от</span> 10 368 ₽</div>
+            </div>
+            <div class="item-product__actions">
+              <button type="button"
+                      class="btn btn--fill btn--green item-product__add">
+                <svg width="18"
+                     height="18">
+                  <use xlink:href="img/spritemap.svg#sprite-button-basket"></use>
+                </svg>
+                В корзину
+              </button>
+            </div>
+            <footer class="item-product__information information-item-product">
+              <div class="information-item-product__rows">
+                <div class="information-item-product__row">
+                  <div class="information-item-product__title">Материал:</div>
+                  <div class="information-item-product__value">Бук</div>
+                </div>
+                <div class="information-item-product__row">
+                  <div class="information-item-product__title">Тип:</div>
+                  <div class="information-item-product__value">Тахта + ламели</div>
+                </div>
+                <div class="information-item-product__row">
+                  <div class="information-item-product__title">Размер:</div>
+                  <div class="information-item-product__value">80х200 см</div>
+                </div>
+                <div class="information-item-product__row">
+                  <div class="information-item-product__title">Цвет:</div>
+                  <div class="information-item-product__value">Белая эмаль</div>
+                </div>
+                <div class="information-item-product__row">
+                  <div class="information-item-product__title">Количество:</div>
+                  <div class="information-item-product__value">1 шт</div>
+                </div>
+              </div>
+              <div class="information-item-product__footer">
+                Без ящиков <br>
+                Без матраса
+              </div>
+            </footer>
+          </div>
+
           <div class="product-list__item item-product">
             <div class="item-product__stickers stickers">
               <div class="stickers__item item-sticker item-sticker--new">NEW</div>
