--- a/src/html/views/basket.html
+++ b/src/html/views/basket.html
@@ -72,8 +72,13 @@ title: "Заголовок | Проект",
           </div>
         </div>
 
-        <div class="item-basket-list__price">
-          10 368 ₽
+        <div class="item-basket-list__prices">
+          <div class="item-basket-list__price item-basket-list__price--old">
+            12 736 ₽
+          </div>
+          <div class="item-basket-list__price">
+            10 368 ₽
+          </div>
         </div>
 
         <div class="item-basket-list__qty qnt-block">
@@ -104,8 +109,13 @@ title: "Заголовок | Проект",
         </div>
 
 
-        <div class="item-basket-list__price-total">
-          20 736 ₽
+        <div class="item-basket-list__prices item-basket-list__prices--total">
+          <div class="item-basket-list__price item-basket-list__price--old">
+            153 736 ₽
+          </div>
+          <div class="item-basket-list__price">
+            22 368 ₽
+          </div>
         </div>
         <div class="item-basket-list__footer">
           <button
