--- a/src/html/views/product.html
+++ b/src/html/views/product.html
@@ -474,6 +474,9 @@ title: "Заголовок | Проект",
         </a>
         <a href="product.htm"
            class="item-kit__title">Кровать двуспальная Лондон</a>
+        <div class="item-kit__count">
+          Кол-во: 2
+        </div>
         <div class="item-kit__props kit-props">
           <div class="kit-props__title">Размеры:</div>
           <div class="kit-props__inner">
@@ -492,6 +495,9 @@ title: "Заголовок | Проект",
         </a>
         <a href="product.htm"
            class="item-kit__title">Кровать Верди 30</a>
+        <div class="item-kit__count">
+          Кол-во: 1
+        </div>
         <div class="item-kit__props kit-props">
           <div class="kit-props__title">Размеры:</div>
           <div class="kit-props__inner">
@@ -510,6 +516,9 @@ title: "Заголовок | Проект",
         </a>
         <a href="product.htm"
            class="item-kit__title">Комод Верди 101</a>
+        <div class="item-kit__count">
+          Кол-во: 1
+        </div>
         <div class="item-kit__props kit-props">
           <div class="kit-props__title">Размеры:</div>
           <div class="kit-props__inner">
@@ -528,6 +537,9 @@ title: "Заголовок | Проект",
         </a>
         <a href="product.htm"
            class="item-kit__title">Кровать двуспальная Лондон</a>
+        <div class="item-kit__count">
+          Кол-во: 1
+        </div>
         <div class="item-kit__props kit-props">
           <div class="kit-props__title">Размеры:</div>
           <div class="kit-props__inner">
@@ -546,6 +558,9 @@ title: "Заголовок | Проект",
         </a>
         <a href="product.htm"
            class="item-kit__title">Кровать двуспальная Лондон</a>
+        <div class="item-kit__count">
+          Кол-во: 1
+        </div>
         <div class="item-kit__props kit-props">
           <div class="kit-props__title">Размеры:</div>
           <div class="kit-props__inner">
