--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -215,6 +215,7 @@ a {
 
   // .page-content--front-page
   &--front-page {
+    margin-bottom       : 0;
     background-image    : url(../img/pages/main/bg.png);
     background-repeat   : no-repeat;
     background-position : 0 360px;
@@ -292,7 +293,6 @@ a {
 
 .questions-form-block {
   margin-top          : 80px;
-  margin-bottom       : -80px;
   background-color    : #00cc52;
   background-image    : url(../img/svg/questions-form.svg);
   background-repeat   : no-repeat;
